# FastAPI-user-RegistrationAndAuthorization

./: README.md  docker-compose.yml  main.py  pyproject.toml
fastapi-application/: main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: 2024_09_03_2148-98a59c57daef_create_table_user.py  2024_09_05_1501-31f9d770f70b_create_table_access_token.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  messages.py  users.py
fastapi-application/api/dependencies/authentication/: access_tokens.py  fastapi_users_router.py  strategy.py  user_manager.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/models/mixins/: int_id_pk.py
fastapi-application/core/schemas/: user.py
fastapi-application/crud/: user.py
