[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.112.2"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

